# NDKProcessImage

./: README.md  build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
ndkimagedemo/: build.gradle
ndkimagedemo/src/androidTest/java/com/kebii/ndkimagedemo/: ExampleInstrumentedTest.java
ndkimagedemo/src/main/: AndroidManifest.xml
ndkimagedemo/src/main/java/com/kebii/ndkimagedemo/: MainActivity.java
ndkimagedemo/src/main/res/drawable/: seekbar_bg_blue_playback.xml
ndkimagedemo/src/main/res/layout/: activity_main.xml
ndkimagedemo/src/main/res/values/: strings.xml
ndkimagedemo/src/test/java/com/kebii/ndkimagedemo/: ExampleUnitTest.java
ndkprocessimageLibrary/: CMakeLists.txt  build.gradle  proguard-rules.pro
ndkprocessimageLibrary/src/androidTest/java/com/kebii/ndkprocessimage/: ExampleInstrumentedTest.java
ndkprocessimageLibrary/src/main/: AndroidManifest.xml
ndkprocessimageLibrary/src/main/cpp/: ProcessImage.cpp  ProcessImage.h  logutil.h
ndkprocessimageLibrary/src/main/java/com/kebii/utils/: JavaImageUtils.java  NativeImageUtils.java
ndkprocessimageLibrary/src/main/res/layout/: activity_main.xml
ndkprocessimageLibrary/src/main/res/values/: colors.xml  strings.xml
ndkprocessimageLibrary/src/test/java/com/kebii/ndkprocessimage/: ExampleUnitTest.java
